Baking broken when progressive refine is enabled #83344

Closed
opened 2020-12-03 03:09:57 +01:00 by lonnie · 18 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30

Operating system: Windows 8.1
Graphics card: Nvidia GTX 1650

Blender Version
Broken:

  • 2.92.0, 2.91.0
    Worked:
  • 2.90.1

Short description of error
Bakes are nearly blank / transparent when the Progressive Refine option is enabled, as if the samples are not properly accumulated.

Exact steps for others to reproduce the error

  • Create a file for baking or download example file bake_without_progressive_refine.blend below
  • Verify that it properly bakes to texture
  • Enabled Render Properties > Performance > Tiles > Progressive Refine
  • Bake the texture again

bake_without_progressive_refine.blend

bake_with_progressive_refine.blend

The result should look like a very faint image of how the actual baked texture should look like.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.30 Operating system: Windows 8.1 Graphics card: Nvidia GTX 1650 **Blender Version** Broken: - 2.92.0, 2.91.0 Worked: - 2.90.1 **Short description of error** Bakes are nearly blank / transparent when the *Progressive Refine* option is enabled, as if the samples are not properly accumulated. **Exact steps for others to reproduce the error** - Create a file for baking or download example file `bake_without_progressive_refine.blend` below - Verify that it properly bakes to texture - Enabled *Render Properties > Performance > Tiles > Progressive Refine* - Bake the texture again [bake_without_progressive_refine.blend](https://archive.blender.org/developer/F9478616/bake_without_progressive_refine.blend) [bake_with_progressive_refine.blend](https://archive.blender.org/developer/F9478615/bake_with_progressive_refine.blend) The result should look like a very faint image of how the actual baked texture should look like.
Author

Added subscriber: @l.leonard.dadx2

Added subscriber: @l.leonard.dadx2

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I've tested this and couldn't find any problem. The file below was created in 2.83.9 and bakes fine in 2.91. Does this file work for you?

bake_2_83_9.blend

Could you please upload a minimal example file that works for you 2.83 but doesn't in 2.91.0?

I've tested this and couldn't find any problem. The file below was created in 2.83.9 and bakes fine in 2.91. Does this file work for you? [bake_2_83_9.blend](https://archive.blender.org/developer/F9433406/bake_2_83_9.blend) Could you please upload a minimal example file that works for you 2.83 but doesn't in 2.91.0?
Author

Thank you for your quick reply!
Yes your file works as it should in 2.83.0 and up, I can recreate this type of minimal baking as well and all is good. I think the issue must be in the baking of selected objects with textures to active object texture or I my process is set up incorrectly and my files work accidently?well.blend
I apologize for the file size but it is the smallest file I have with baking.

Thank you for your quick reply! Yes your file works as it should in 2.83.0 and up, I can recreate this type of minimal baking as well and all is good. I think the issue must be in the baking of selected objects with textures to active object texture or I my process is set up incorrectly and my files work accidently?[well.blend](https://archive.blender.org/developer/F9434951/well.blend) I apologize for the file size but it is the smallest file I have with baking.

@l.leonard.dadx2 Thank you for the file. I will look into this tomorrow.

Don't worry about the file size, 12 MB is completely fine. We just always say minimal because some users upload production files >500 MB. This complicates identifying the relevant parts to reproduce the bug and unnecessarily occupies storage on our server.

@l.leonard.dadx2 Thank you for the file. I will look into this tomorrow. Don't worry about the file size, 12 MB is completely fine. We just always say *minimal* because some users upload production files >500 MB. This complicates identifying the relevant parts to reproduce the bug and unnecessarily occupies storage on our server.

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

I can reproduce some odd results in 2.90.1, 2.91.0 and 2.92.0 with your file that do not happen in 2.83.9. I'll have to investigate this further.

For my own reference: There have been issues in the past that should be fixed (#77298, #78072).

I can reproduce some odd results in 2.90.1, 2.91.0 and 2.92.0 with your file that do not happen in 2.83.9. I'll have to investigate this further. For my own reference: There have been issues in the past that should be fixed (#77298, #78072).

Observations:

  • Opening the file 2.92, creating a new texture and baking to it, results in a very faint, almost entirely transparent results. When switching the bake type to normal map, the result is cut out similar to the #78072 examples.
  • Appending the collections to a new file in 2.92 allows to bake, but the result is darker and there appears to be more (self-)occlusion
    • Append all collections
    • Enable Bake > Selected to Active
    • Set Extrusion to 0.152
    • Set render samples similar to original file
    • In the World properties enable Ambient Occlusion with Factor set to 0.5 and Distance to 10 m
Observations: - Opening the file 2.92, creating a new texture and baking to it, results in a very faint, almost entirely transparent results. When switching the bake type to normal map, the result is cut out similar to the #78072 examples. - Appending the collections to a new file in 2.92 allows to bake, but the result is darker and there appears to be more (self-)occlusion - Append all collections - Enable *Bake > Selected to Active* - Set *Extrusion* to 0.152 - Set render samples similar to original file - In the *World* properties enable *Ambient Occlusion* with *Factor* set to 0.5 and *Distance* to 10 m
Author

Thank you for looking into this. After applying your suggestions I did see that it did in fact bake in 2.91.0, just nearly black. I can get some color and clarity by changing some lighting settings such as the Background strength to 500 in the World tab or adjusting the Exposure in the Render tab, still unfortunately with unusable results.
I just tried baking a beveled edge and textured cube to another cube in 2.91.0 using the same set up process I use in 2.83.0, this is not baking at all.
bakedBrick.blend

A bit off topic, I see that 2.91.0 only utilizes my GPU as low as 10% and only up to 60% while baking and rendering, whereas 2.83.0 utilizes 99%.

Thank you for looking into this. After applying your suggestions I did see that it did in fact bake in 2.91.0, just nearly black. I can get some color and clarity by changing some lighting settings such as the Background strength to 500 in the World tab or adjusting the Exposure in the Render tab, still unfortunately with unusable results. I just tried baking a beveled edge and textured cube to another cube in 2.91.0 using the same set up process I use in 2.83.0, this is not baking at all. [bakedBrick.blend](https://archive.blender.org/developer/F9477125/bakedBrick.blend) A bit off topic, I see that 2.91.0 only utilizes my GPU as low as 10% and only up to 60% while baking and rendering, whereas 2.83.0 utilizes 99%.

This appears to be caused by the Render Properties > Performance > Tiles > Progressive Refine option.

This appears to be caused by the *Render Properties > Performance > Tiles > Progressive Refine* option.
Robert Guetzkow changed title from 2.91 and 2.90 not baking? to Baking broken when progressive refine is enabled 2020-12-05 15:04:28 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

Thank you, it works! ...not as intended I'm assuming, but that did the trick.

Thank you, it works! ...not as intended I'm assuming, but that did the trick.

@l.leonard.dadx2 Definitely not intended, I've set the status to Confirmed. This is a bug.

@l.leonard.dadx2 Definitely not intended, I've set the status to *Confirmed*. This is a bug.
Author

Thank you again, Blender is such a great asset (even with the bug), and you guys do amazing work here.

Thank you again, Blender is such a great asset (even with the bug), and you guys do amazing work here.

This issue was referenced by 3fd92b5c22

This issue was referenced by 3fd92b5c224b4a5ba274514a62643f8d7df644d9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-01-21 15:12:48 +01:00

This issue was referenced by ef6d652428

This issue was referenced by ef6d6524280d27d5e665658b538ed226bc67c65c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83344
No description provided.