Fix T83344: Cycles baking with progressive refine fails on GPU